--- a/ui/style.css
+++ b/ui/style.css
@@ -1,7 +1,6 @@
 body {
     font-family: sans-serif;
-    background-color: lightgrey;
-    margin-top: 75px;
+    margin-top: 60px;
 }
 
 .center {
@@ -20,3 +19,28 @@ body {
     height: 200px;
 }
 
+.container {
+           max-width: 800px;
+           margin: 0 auto;
+           color: #03038e;
+           font-family: sans-seriff;
+           padding-left: 20px;
+           padding-right: 20px;
+           } 
+
+.comment{
+    margin-left: 10px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #ccc;
+}
+
+.commenter{
+    font-style: italic;
+    font-size: 0.8em;
+}
+
+.comment_form {
+    margin-left: 10px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #ccc;
+}
